--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -1,3 +1,15 @@
 .shadow {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.gradient {
+  background-image: linear-gradient(
+    to left,
+    #02aab0,
+    #00b3b2,
+    #00bcb1,
+    #00c5b0,
+    #00cdac
+  );
 }
