--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -4,12 +4,24 @@
 }
 
 .gradient {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to left,
     #02aab0,
     #00b3b2,
     #00bcb1,
     #00c5b0,
     #00cdac
-  );
+  ); */
+
+  background: #005c97; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #363795,
+    #005c97
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #363795,
+    #005c97
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
