--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,8 +8,7 @@
   margin: 0;
   vertical-align: baseline;
   list-style: none;
-  /* font-family: "Bebas Neue", cursive; */
-  font-family: "Roboto", sans-serif;
+ 
 }
 
 /* custom scrollbar */
