--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary: #4269E2;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+
+
+input, textarea {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  /* Add any additional styles as needed */
+}
 
 * {
   padding: 0;
@@ -10,25 +27,24 @@
   list-style: none;
  
 }
-
 /* custom scrollbar */
 ::-webkit-scrollbar {
   width: 20px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: #1A1A1A;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d6dee1;
+  background-color: #4269E2;
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #a8bbbf;
+  background-color: #2E55BA;
 }
 
 .progress-bar {
